--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -30,3 +30,15 @@ content:
 - Count words
 - Serializable user
 - The Range class
+- Complete a class
+- Complete the eager singleton
+- Remote Controller
+- Undo command
+- Stock Broker
+- Getting current thread info
+- Message notifier as a thread
+- Multiple threads
+- Numbers filter
+- VeganPizza
+- Ordering the execution of threads
+- Summing with threads
