--- a/Blockchain/Miner mania/task-info.yaml
+++ b/Blockchain/Miner mania/task-info.yaml
@@ -239,6 +239,90 @@ files:
         }
     }
   learner_created: false
+- name: src/blockchain/Blockchain.java
+  visible: true
+  learner_created: true
+- name: src/blockchain/util/StringUtils.java
+  visible: true
+  text: |
+    package blockchain;
+
+    import java.security.MessageDigest;
+
+    public class StringUtil {
+        public static String applySha256(String input){
+            try {
+                MessageDigest digest = MessageDigest.getInstance("SHA-256");
+                /* Applies sha256 to our input */
+                byte[] hash = digest.digest(input.getBytes("UTF-8"));
+                StringBuilder hexString = new StringBuilder();
+                for (byte elem: hash) {
+                    String hex = Integer.toHexString(0xff & elem);
+                    if(hex.length() == 1) hexString.append('0');
+                    hexString.append(hex);
+                }
+                return hexString.toString();
+            }
+            catch(Exception e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+    }
+  learner_created: true
+- name: src/blockchain/util/SerializationUtils.java
+  visible: true
+  learner_created: true
+- name: src/blockchain/Block.java
+  visible: true
+  text: |
+    package blockchain;
+
+    import java.util.Date;
+
+    public class Block {
+
+        private int id;
+        private long timeStamp;
+        private String previousHash;
+        private String hash;
+
+        public Block(int id, String hash, String previousHash) {
+            this.id = id;
+            this.timeStamp = new Date().getTime();
+            this.previousHash = previousHash;
+            this.hash = StringUtil.applySha256(hash);
+        }
+
+        public int getId() {
+            return id;
+        }
+
+        public long getTimeStamp() {
+            return timeStamp;
+        }
+
+        public String getPreviousHash() {
+            return previousHash;
+        }
+
+        public String getHash() {
+            return hash;
+        }
+
+        @Override
+        public String toString() {
+            return  "\n" + "Block: " + "\n" +
+                    "Id: " + id + "\n" +
+                    "Timestamp: " + timeStamp + "\n" +
+                    "Hash of the previous block: " + "\n" + previousHash + "\n" +
+                    "Hash of the block: " + "\n" + hash;
+        }
+    }
+  learner_created: true
+- name: tamechain.data
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/50/stages/273/implement
 status: Unchecked
 record: -1
