--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -47,3 +47,6 @@ content:
 - Thread-safe account
 - Messaging
 - Check whether a number is prime
+- Pizza Decorator
+- Breakfast Decorator
+- Coffee Decorator
