--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -71,3 +71,5 @@ content:
 - Sorting the absolute values
 - Maximum of the absolute values
 - Count words without repetitions
+- Counting clicks
+- The total sum of transaction by each account
