--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -15,7 +15,7 @@ stages:
   is_completed: true
 - id: 274
   step: 5416
-  is_completed: false
+  is_completed: true
 - id: 275
   step: 5417
   is_completed: false
@@ -45,7 +45,7 @@ topics:
   - title: Algorithms in Java
     theory_id: 3540
   - title: IDE
-    theory_id: 3805
+    theory_id: 10996
   - title: What is an exception
     theory_id: 3497
   - title: NPE
